@@ -1,4 +1,4 @@
-AC_INIT(eix, 0.5.4, http://sourceforge.net/projects/eix/)
+AC_INIT(eix, 0.5.5, http://sourceforge.net/projects/eix/)
 AC_CANONICAL_TARGET
 
 AM_CONFIG_HEADER(config.h)
